--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "displayName": "LeoECS Lite Threads",
     "description": "Threads support for LeoECS Lite.",
     "unity": "2020.3",
-    "version": "2021.6.22",
+    "version": "2021.9.22-preview",
     "keywords": [
         "leoecslite",
         "leoecs",
